@@ -1,3 +1,7 @@
+2010-08-xx robux4
+New 1.1.1 version:
+    - no need to put the internal code of EbmlCrc32 in the public header
+
 2010-07-xx robux4
 New 1.1.0 version:
     - EbmlElement::VoidMe() now returns a uint64
